--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
 	    <version>5.1.1</version>
 	</dependency>
 
+<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/htmlunit-driver -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>htmlunit-driver</artifactId>
+    <version>3.55.0</version>
+</dependency>
+
   </dependencies>
   <build>
   <plugins>
